--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "packageManager": "pnpm@9.0.0",
     "@prisma/adapter-pg": "^7.3.0",
     "bullmq": "^5.7.0",
     "cron": "^3.1.0",
