--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "heroku-prebuild": "pnpm install --prod=false",
-    "heroku-build": "prisma generate && pnpm exec tsc && cp -r src/generated dist/",
+    "heroku-build": "prisma generate && pnpm exec tsc",
     "start": "node dist/worker/index.js",
     "dev:worker": "tsx watch  --env-file=.env src/worker/index.ts",
     "dev:scheduler": "tsx watch --env-file=.env src/scheduler/index.ts ",
