--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bullmq": "^5.7.0",
     "cron": "^3.1.0",
     "dotenv": "^16.4.0",
+    "express": "^5.2.1",
     "ioredis": "^5.4.0",
     "pg": "^8.18.0",
     "pino": "^9.0.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/cron": "^2.4.0",
+    "@types/express": "^5.0.6",
     "@types/node": "^20.12.0",
     "@types/pg": "^8.16.0",
     "@vitest/coverage-v8": "^4.0.18",
